Fix typos and add some more packages to environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,8 @@ dependencies:
   - intake
   - intake-geopandas
   - intake-xarray
+  - intake-stac
   - matplotlib
   - s3fs
-  
+  - sat-search 
+
